[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unifuncs-mcp-server"
version = "0.1.0"
description = "UniFuncs MCP Server - 深度搜索、深度研究、网页搜索和阅读能力"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "UniFuncs", email = "support@unifuncs.com" }
]
keywords = [
    "mcp",
    "claude",
    "unifuncs",
    "deep-search",
    "deep-research",
    "web-search",
    "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://unifuncs.com"
Repository = "https://github.com/UniFuncs/ufn-mcp-server"
Documentation = "https://unifuncs.com/api"
"Bug Tracker" = "https://github.com/UniFuncs/ufn-mcp-server/issues"

[project.scripts]
unifuncs-mcp-server = "unifuncs_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unifuncs_mcp"]
